# salary

./: README.MD  docker-compose.db.yml  docker-compose.yml
app/: Dockerfile  alembic.ini  crud.py  dependencies.py  main.py  pyproject.toml
app/core/: config.py  utils.py
app/core/database/migrations/: env.py
app/core/database/migrations/versions/: 3de076c6d73a_init.py  7f3a8d87ab71_init.py  bb1625cd3b83_init.py  cc5a2cdddcab_init.py
app/internal/: admin.py
app/models/: users.py
app/routers/: users.py
app/schemas/: users.py
