[tool.poetry]
name = "app"
version = "0.1.0"
description = "Testtask for shift"
authors = ["Vladislav Sarpov <dyukoldyu@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
sqladmin = "^0.11.0"
asyncpg = "^0.27.0"
alembic = "^1.11.1"
sqlmodel = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
